# ckanext-metadata-beautifier

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/metadata_beautifier/: plugin.py  views.py
ckanext/metadata_beautifier/assets/: style.css  webassets.yml
ckanext/metadata_beautifier/i18n/: ckanext-metadata-beautifier.pot
ckanext/metadata_beautifier/i18n/de/LC_MESSAGES/: ckanext-metadata-beautifier.mo  ckanext-metadata-beautifier.po
ckanext/metadata_beautifier/logic/: action.py  auth.py  schema.py  validators.py
ckanext/metadata_beautifier/templates/package/: read.html  read_base.html  resource_read.html
ckanext/metadata_beautifier/templates/package/snippets/: additional_info.html
