[project]
name = "ckanext-metadata-beautifier"
version = "0.0.1"
description = "metadata beautifier"
readme = "README.md"
authors = [
    {name = "Ondics", email = "info@ondics.de"}
]
license = { text = "AGPLv3+" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["CKAN", "dataviewer"]
dependencies = []

[project.urls]
Homepage = "https://github.com/Ondics/ckanext-metadata-beautifier"

[project.entry-points."ckan.plugins"]
metadata_beautifier = "ckanext.metadata_beautifier.plugin:MetadataBeautifierPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[build-system]
requires = ["setuptools>=44.1.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
